feat: Enable GitHub Actions act compatibility with Java 26 via SDKMAN
- Use SDKMAN to install Java 26 EA (GraalVM 26.ea.13) for CI
- setup-java@v4 doesn't support Java 26 yet, so use SDKMAN for EA versions
- Keep setup-java for stable versions (21, 22)
- Update all jobs to use consistent SDKMAN approach for Java 26

Verified working with: act -W .github/workflows/ci-gate.yml -j build-verification --matrix java-version:26